Changed min-width breakpoint to 330px to avoid overlap for iPhone SE
-  added 10px leeway to iPhone SE width to ensure these stylings not applied to this device

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ li {
   }
 }
 
-@media (min-width: 320px) and (max-width: 500px) {
+@media (min-width: 330px) and (max-width: 480px) {
   h1 {
     font-size: 32px;
   }
